kubernetes/apps/tools/forgejo/runner/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: forgejo-runner
  namespace: tools
spec:
  description: Restrict the runner daemon egress to forgejo, the kube-apiserver, and the action sources.
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: forgejo-runner
      app.kubernetes.io/name: forgejo-runner
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tools
            k8s:app.kubernetes.io/name: forgejo
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toFQDNs:
        - matchName: data.forgejo.org
        - matchName: github.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: forgejo-runner-jobs
  namespace: tools
spec:
  description: Restrict CI job pods to forgejo, crawl4ai, the runner cache, the external gateway proxies, the NAS, and internet 80/443.
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: forgejo-runner-instance
  enableDefaultDeny:
    ingress: true
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tools
            k8s:app.kubernetes.io/name: forgejo
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: ai
            k8s:app.kubernetes.io/name: crawl4ai
      toPorts:
        - ports:
            - port: "11235"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tools
            k8s:app.kubernetes.io/name: forgejo-runner
      toPorts:
        - ports:
            - port: "8088"
              protocol: TCP
            - port: "8089"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            k8s:gateway.envoyproxy.io/owning-gateway-name: envoy-external
    - toCIDRSet:
        - cidrGroupRef: internet
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toCIDR:
        - 192.168.42.20/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  egressDeny:
    - toCIDRSet:
        - cidr: 10.0.0.0/8
          except:
            - 10.42.0.0/16
            - 10.43.0.0/16
        - cidr: 192.168.0.0/16
          except:
            - 192.168.42.20/32
    - toCIDR:
        - 172.16.0.0/12
    - toEntities:
        - host
        - remote-node
